2004-09-27  Matthias Clasen  <mclasen@redhat.com>

	Fix #153082:
	
	* gtk/gtkmain.c (do_pre_parse_initialization): Don't call gdk_parse_args()
	here, we don't want to parse args twice.
	(gtk_init_with_args): Add the ugid check here as well.
	(gtk_parse_args): Add the gdk options to the main option group as well.

2004-09-27  Paolo Borelli  <pborelli@katamail.com>

	* gtk/Makefile.am:
	* gtk/gtk.h:
	* gtk/gtkmenutoolbutton.[ch]: add the GtkMenuToolButton widget
	discussed in bug #151441.

	* docs/reference/gtk/gtk-docs.sgml:
	* docs/reference/gtk/gtk-sections.txt:
	* docs/reference/gtk/gtk.types:
	* docs/reference/gtk/tmpl/gtkmenutoolbutton.sgml: docs for the
	new widget.

2004-09-27  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilesystemunix.c (gtk_file_folder_unix_list_children): 
	Emit ::finished-loading.

2004-09-27  Roozbeh Pournader  <roozbeh@farsiweb.info>
 
	* configure.in: Added Iranian Azerbaijani (az_IR) to ALL_LINUGAS.

2004-09-27  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_append_column): Fix typo in
	docs.  (#153811, Billy Biggs)

	* gtk/gtkpathbar.h (struct _GtkPathBar): Only need a bit for
	need_timer.

2004-09-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtknotebook.c (gtk_notebook_class_init): Add a missing _
	to the name of the has_secondary_backward_stepper property.
	Noticed by Michèle Garoche.

Sun Sep 26 02:06:43 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkpathbar.h (struct _GtkPathBar): add missing structures.

2004-09-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkpathbar.c (gtk_path_bar_check_parent_path): Scroll
	to make the current folder visible.  (#152921)

	* gtk/gtkbutton.c: Revert the button state to !button_down,
	if we're missing the release event due to grab shadowing
	or insensitivation.

	* gtk/gtkpathbar.c: Make the slider buttons scroll.

	* gtk/gtkfilechooserdefault.c (shortcuts_remove_rows): Remove 
	debug spew.